[package]
name = "chai"
version = "0.1.0"
edition = "2024"
description = "A framework for creating TUI SSH programs in Rust"
license = "MIT"
keywords = ["tui", "ssh", "framework", "ratatui", "terminal"]
categories = ["command-line-interface", "network-programming"]

[dependencies]
anyhow = "1.0.100"
ratatui = "0.30.0"
russh = "0.56.0"
tokio = "1.48.0"
tracing = "0.1.44"
