[package]
name = "chai-framework"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "A framework for creating TUI SSH programs in Rust"
keywords = ["tui", "ssh", "framework", "ratatui", "terminal"]
categories = ["command-line-interface", "network-programming"]

[dependencies]
anyhow = "1.0.100"
ratatui = "0.30.0"
russh = "0.56.0"
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
